fix Dockerfile: add chmod for mvnw

--- a/demo/Dockerfile
+++ b/demo/Dockerfile
@@ -4,8 +4,13 @@ WORKDIR /app
 
 COPY . .
 
+# Fix permission inside Docker (mandatory)
+RUN ["chmod", "+x", "./mvnw"]
+
+# Build the project
 RUN ./mvnw clean package -DskipTests
 
 EXPOSE 8080
 
+# Run the app
 CMD ["sh", "-c", "java -jar target/*.jar"]
