--- a/demo/Dockerfile
+++ b/demo/Dockerfile
@@ -1,16 +1,16 @@
-FROM eclipse-temurin:17-jdk
+# Dockerfile example
+FROM eclipse-temurin:17-jdk-alpine
 
 WORKDIR /app
 
 COPY . .
 
-# Fix permission inside Docker (mandatory)
-RUN ["chmod", "+x", "./mvnw"]
+# Make mvnw executable (Linux)
+RUN chmod +x mvnw
 
 # Build the project
 RUN ./mvnw clean package -DskipTests
 
 EXPOSE 8080
 
-# Run the app
-CMD ["sh", "-c", "java -jar target/*.jar"]
+CMD ["java","-jar","target/demo-0.0.1-SNAPSHOT.jar"]
